<?xml version="1.0"?>
<package>
  <name>sr_lidar_distortion_correction</name>
  <version>1.0.0</version>
  <description>Lidar Distortion Correction</description>

  <maintainer email="paul.heinisch@stud-mail.uni-wuerzburg.de">Paul Heinisch</maintainer>
  
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>message_generation</run_depend>

</package>
